--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,9 +1,12 @@
-<div style="text-align: center">
-  <h1>Welcome to client!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-    alt="Nx - Smart, Fast and Extensible Build System"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<tui-root>
+  <form class="b-form" [formGroup]="testForm">
+    <tui-input-date-time formControlName="testValue" [min]="minDatetime">
+      Choose date and time
+      <input tuiTextfield placeholder="OCT 26 1985 01:22" />
+    </tui-input-date-time>
+
+    <p>Form value:</p>
+
+    <pre><code>{{testForm.value | json}}</code></pre>
+  </form>
+</tui-root>
